@@ -1,3 +1,6 @@
+## tests for pcdtest
+
+
 ## test pcdtest for NaN value in result (due to non-intersecting pairs)
 ## fixed in rev. 339
 
@@ -29,3 +32,9 @@ testres3 <- pcdtest(mod_pool_no_intersect_unbal, test = "cd")
 if (is.nan(testres3$statistic)) stop("statistic is NaN")
 if (is.na(testres3$statistic)) stop("statistic is NA")
 if (is.na(testres3$p.value)) stop("p-value is NA")
+
+
+## test case for regression of variable on constant
+## (resulted in error pre rev. 342:
+## "Error in lm.fit(tX, ty) : 'x' must be a matrix"
+pcdtest(value ~ 1, data = Grunfeld)
